# LRP-For-Deep-Recurrent-Factor-Models

./: .gitignore  CustomLayers.py  LRPMethods.py  LSTM.py  LSTM2.py  LSTMClass.py  LSTMxLRP_3FModel.ipynb  License  Preprocessing.py  README.md  draft.py  pyproject.toml  requirements.txt
Data/: SignalDoc.xlsx
Data/Results/: .~lock.LSTMResults.xlsx#  LSTMResults.ods  LSTMResults.xlsx
Notebooks/: DeepFactorModels.ipynb  LSTMxLRP_3FModel.ipynb
Results/: LSTMResults.ods
data/: F-F_Research_Data_Factors.CSV  PredictorLSretWide.csv
static/Data/: FactorDescription.md
